--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-image-picker",
-  "version": "2.3.4",
+  "name": "react-native-image-picker-legacy",
+  "version": "1.5",
   "description": "A React Native module that allows you to use native UI to select media from the device library or directly from the camera",
   "react-native": "src/index.ts",
   "types": "lib/typescript/index.d.ts",
@@ -33,7 +33,7 @@
       "email": "rusfearuth@gmail.com"
     }
   ],
-  "homepage": "https://github.com/react-community/react-native-image-picker#readme",
+  "homepage": "https://github.com/projeto-solar/react-native-image-picker-legacy",
   "license": "MIT",
   "scripts": {
     "start": "react-native start",
